[package]
name = "datasets_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
indicatif = "0.17.8"
nalgebra = "0.33.0"
parquet = "53.0.0"
serde = { version = "1.0.209", features = ["derive"] }
simba = "0.9.0"
syn_crabs = "0.2.0"
uuid = { version = "1.10.0", features = ["v4"] }
ai-dataloader = "0.6.1"
fmt = "0.1.0"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.127"
csv = "1.3.0"
polars = "0.42.0"
chrono = "0.4.38"
rand = "0.8"
parking_lot = "0.12"
rayon = "1.7"
clap = "4.5.16"

[lib]
name = "datasets_rs"
path = "src/lib.rs"




